$Id: ChangeLog,v 1.62 2004/04/18 12:49:52 h_oudejans Exp $

2004-04-18 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fullscreen button in windows works.
	* removed segfault in ChangeJoystickport.
	* fixed a bug with frameskip in the launchscript interpreter.

2004-04-17 Manuel Bilderbeek <manuel@msxnet.org>
	* added loads of tooltips to the wxg files and changed some texts
	* in the mixer, the audio channels have also tooltips with their full
	  name and type now
	* added preliminary documentation files, license file (GPL), AUTHORS
	  and README. Also added doc directory with release notes and other
	  stuff, which still need to be filled in! It's mostly copied from
	  openMSX and adjusted for Catapult. But remember: TODO: fill all that
	  stuff in!

2004-04-17 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed: openmsx fatal errors were sometimes repeated over and
	   over again.
	* Added: Full screen button (disabled in windows for now).
	* Fixed segfault on close catapult while openmsx runs (again).
	  Thanks to wouter.
	* Aligned most resources. Changed Launch/Abort to Start/Stop.

2004-04-16 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Restructured the videocontrolpage.
	* Made 'Skip frames' / 'Max Frameskip' autochanging depending 
	   on openmsx version.

2004-04-15 Herman Oudejans <hn.oudejans@quicknet.nl>
	* fixed gtk segfault when catapult closes and openmsx still runs
	* fixed gtk segfault when mouse is being hold while selecting the
	   same joystickdevice in both joystick ports
	* Openmsx executable and share path are now saved when
	   closing the configuration dialog with Ok.
	* Auto Frame Skip is now hidden if not used
	* When (un)plugging devices, the mixer is only re-initiated if
	   the number of sounddevices has changed.

2004-04-12 Herman Oudejans <hn.oudejans@quicknet.nl>
	* fixed gtk segfault when starting openmsx.
	* in case of openmsx crashing, leds are now turned off
	* Made the linux openmsx launch procedure in linux native code